--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="recipe_list_item_label">Recipe label</string>
     <string name="recipe_list_item_matching">100%</string>
     <string name="recipe_list_item_no_time_known">No time indicated</string>
+    <string name="recipe_list_item_time_min">%d min</string>
+    <string name="recipe_list_item_time_min_hours">%dh%d</string>
     <string name="recipe_list_item_preparation_time">Preparation time</string>
     <string name="recipe_list_item_kcal">kcal</string>
     <string name="description_image">Description image</string>
