--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <!--Toolbar-->
     <string name="toolbar_grocery_list">My grocery list</string>
     <string name="toolbar_search_ingredients">Search Ingredients</string>
+    <string name="toolbar_recipe_detail">Recipe detail</string>
 
     <!--Recipe List item-->
     <string name="recipe_list_item_image">image_recipe</string>
@@ -21,5 +22,18 @@
     <string name="recipe_list_item_preparation_time">Preparation time</string>
     <string name="recipe_list_item_kcal">kcal</string>
     <string name="description_image">Description image</string>
+
+    <!--Recipe Detail-->
+    <string name="recipe_detail_item_image">image_recipe</string>
+    <string name="recipe_detail_item_label">Recipe title</string>
+    <string name="recipe_detail_item_no_time_known">No time indicated</string>
+    <string name="recipe_detail_item_detail_time">Prep time : %s min \n
+                                            Cook time : %s min</string>
+    <string name="recipe_detail_item_total_time">Total time : %s</string>
+    <string name="recipe_detail_item_kcal">%s \n kcal</string>
+    <string name="recipe_detail_item_number_person">%d \n personnes</string>
+    <string name="recipe_detail_item_one_person">1 personne</string>
+    <string name="recipe_detail_item_step">Step %d : %s</string>
+    <string name="recipe_detail_item_recipe_view">Recipe</string>
 
 </resources>
