--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="toolbar_search_ingredients">Search Ingredients</string>
     <string name="toolbar_recipe_detail">Recipe detail</string>
 
+    <!--No item found-->
+    <string name="no_item_found_favourite">No favourite recipes for the moment</string>
+    <string name="no_item_found_recipes">Choose at least one ingredient to see recipes</string>
+    <string name="no_item_found_ingredients">Choose your first ingredient</string>
     <!--Recipe List item-->
     <string name="recipe_list_item_image">image_recipe</string>
     <string name="recipe_list_item_label">Recipe label</string>
@@ -21,7 +25,7 @@
     <string name="recipe_list_item_time_min_hours">%dh%d</string>
     <string name="recipe_list_item_preparation_time">Preparation time</string>
     <string name="recipe_list_item_kcal">kcal</string>
-    <string name="recipe_list_item_kcal_notknow">N.C kcal</string>
+    <string name="recipe_list_item_kcal_notknow">N.C</string>
     <string name="description_image">Description image</string>
 
     <!--Recipe Detail-->
