--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="no_item_found_favourite">No favourite recipes for the moment</string>
     <string name="no_item_found_recipes">Choose at least one ingredient to see recipes</string>
     <string name="no_item_found_ingredients">Choose your first ingredient</string>
+    <string name="no_item_found_grocery">Empty grocery list</string>
+
     <!--Recipe List item-->
     <string name="recipe_list_item_image">image_recipe</string>
     <string name="recipe_list_item_label">Recipe label</string>
