--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,17 @@
     <string name="ingredient_type_meat">Viande</string>
     <string name="we_research_recipes_for_you">We research recipes for you</string>
 
+    <!--Login -->
+    <string name="loginFacebook">Sign in with Facebook</string>
+    <string name="loginGoogle">Sign in with Google</string>
+    <string name="appNameDescription">My fridge, my freeze, My freezdge</string>
+
+    <!-- LOGIN ACTIVITY -->
+    <string name="error_authentication_canceled">Authentication cancelled&#8230;</string>
+    <string name="error_no_internet">No internet connection!</string>
+    <string name="error_unknown_error">An unknown error occurred&#8230;</string>
+    <string name="connection_succeed">Authentication successful!</string>
+    <string name="button_login_text_logged">View profile</string>
+    <string name="button_login_text_not_logged">Login</string>
+
 </resources>
