--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,9 +39,8 @@
     <string name="recipe_detail_item_no_time_known">No time indicated</string>
     <string name="recipe_detail_item_detail_time">Prep : %s\nCook : %s</string>
     <string name="recipe_detail_item_total_time">Total time : %s</string>
-    <string name="recipe_detail_item_kcal">%s \n kcal</string>
-    <string name="recipe_detail_item_number_person">%d \n personnes</string>
-    <string name="recipe_detail_item_one_person">1 personne</string>
+    <string name="recipe_detail_item_kcal">%s\nkcal</string>
+    <string name="recipe_detail_item_number_person">%d\npers.</string>
     <string name="recipe_detail_item_recipe_view">Recipe</string>
     <string name="toastNoIngredientResultSearch">No ingredient found</string>
     <string name="search_ingredient_searchview_label">Search ingredient here...</string>
