--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,7 @@
     <string name="social_media_post_delete_title_dialog">Delete post</string>
     <string name="social_media_post_delete_message_dialog">Are you sure to delete this post</string>
     <string name="social_media_post_delete_confirmation_dialog">Post deleted</string>
+    <string name="social_media_community">A community opens up to you</string>
 
     <!--Add post -->
     <string name="title_tips">Tip\'s title</string>
