Implement research on recipes

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -131,5 +131,7 @@
 
     <!--Step -->
     <string name="step_recipe">Etape %d : %s</string>
+    <string name="internet_connexion">Pas de connexion internet</string>
+    <string name="search_recipe_searchview_label">Recherchez une recette ici...</string>
 
 </resources>
