--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="recipe_list_item_time_min_hours">%dh%d</string>
     <string name="recipe_list_item_time_hours">%dh</string>
     <string name="recipe_list_item_preparation_time">Preparation time</string>
+    <string name="recipe_list_item_cuisine_type" translatable="false">Cuisine_type</string>
+    <string name="recipe_list_item_dish_type" translatable="false">Dish_type</string>
     <string name="recipe_list_item_kcal">kcal</string>
     <string name="recipe_list_item_kcal_notknow">N.C</string>
     <string name="description_image">Description image</string>
@@ -133,5 +135,17 @@
     <!--Step -->
     <string name="step_recipe">Step %d : %s</string>
     <string name="internet_connexion">No internet connection</string>
+
+    <!--Array string -->
+    <string name="array_filter_dessert">Dessert</string>
+    <string name="array_filter_entry">Starter</string>
+    <string name="array_filter_plat">Principal dish</string>
+    <string name="array_filter_cocktail">Cocktail</string>
+    <string name="array_filter_all">All</string>
+    <string name="array_dialog_title">Filter</string>
+    <string name="array_filter_dessert_search" translatable="false">Desserts</string>
+    <string name="array_filter_entry_search" translatable="false">Starter</string>
+    <string name="array_filter_plat_search" translatable="false">Main course</string>
+    <string name="array_filter_cocktail_search" translatable="false">Drinks</string>
 
 </resources>
